@@ -1065,6 +1065,7 @@
    <date>2012-10-02</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [mms] Correctly reindex existing rules when deleting a rule and using the SQL filters storage driver.
 * [mms] Don&apos;t allow a user to save a rule with no matching conditions.
    </notes>
   </release>
